--- a/MVVM_FindSong/ListViewController.xib
+++ b/MVVM_FindSong/ListViewController.xib
@@ -7,8 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListViewController" customModule="MVVM_FindSong" customModuleProvider="target">
             <connections>
-                <outlet property="tableView" destination="Grs-gT-Ev0" id="KyV-yx-W3E"/>
-                <outlet property="view" destination="iN0-l3-epB" id="Nhj-zl-nfU"/>
+                <outlet property="tableView" destination="Grs-gT-Ev0" id="BIm-ZX-gRi"/>
+                <outlet property="view" destination="iN0-l3-epB" id="hIA-hj-BY1"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,8 +20,8 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="EG2-Ea-WZ7"/>
-                        <outlet property="delegate" destination="-1" id="T59-hO-Wyx"/>
+                        <outlet property="dataSource" destination="-1" id="Ka5-jv-mfX"/>
+                        <outlet property="delegate" destination="-1" id="dA4-TF-oo0"/>
                     </connections>
                 </tableView>
             </subviews>
@@ -32,7 +32,7 @@
                 <constraint firstAttribute="bottom" secondItem="Grs-gT-Ev0" secondAttribute="bottom" id="Plc-sa-Dfr"/>
                 <constraint firstItem="Grs-gT-Ev0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Yhm-Jb-X81"/>
             </constraints>
-            <point key="canvasLocation" x="674" y="206"/>
+            <point key="canvasLocation" x="646" y="204"/>
         </view>
     </objects>
 </document>
