--- a/MVVM_FindSong/ListViewController.xib
+++ b/MVVM_FindSong/ListViewController.xib
@@ -3,10 +3,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListViewController" customModule="MVVM_FindSong" customModuleProvider="target">
             <connections>
+                <outlet property="imageView" destination="nHq-To-5C0" id="MHI-LU-y3M"/>
+                <outlet property="label" destination="SVL-yn-7QO" id="Mhs-50-TZy"/>
                 <outlet property="tableView" destination="Grs-gT-Ev0" id="BIm-ZX-gRi"/>
                 <outlet property="view" destination="iN0-l3-epB" id="hIA-hj-BY1"/>
             </connections>
@@ -16,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Grs-gT-Ev0">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" style="plain" allowsSelectionDuringEditing="YES" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Grs-gT-Ev0">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -24,15 +27,39 @@
                         <outlet property="delegate" destination="-1" id="dA4-TF-oo0"/>
                     </connections>
                 </tableView>
+                <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="No data                                          Enter song name in search bar" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SVL-yn-7QO">
+                    <rect key="frame" x="150" y="276" width="300" height="48"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="300" id="FtD-NB-F3Z"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
+                    <color key="textColor" red="0.89411764709999997" green="0.18039215689999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="gram.png" translatesAutoresizingMaskIntoConstraints="NO" id="nHq-To-5C0">
+                    <rect key="frame" x="250" y="168" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="2R5-Da-7Zx"/>
+                        <constraint firstAttribute="width" secondItem="nHq-To-5C0" secondAttribute="height" multiplier="1:1" id="XH9-jk-Y1u"/>
+                        <constraint firstAttribute="width" constant="100" id="dFR-1L-36N"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="SVL-yn-7QO" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="2YZ-PC-BQ5"/>
                 <constraint firstAttribute="trailing" secondItem="Grs-gT-Ev0" secondAttribute="trailing" id="8KA-TJ-wr6"/>
+                <constraint firstItem="SVL-yn-7QO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Dg1-Tt-FwG"/>
                 <constraint firstItem="Grs-gT-Ev0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="OFf-DF-TLF"/>
                 <constraint firstAttribute="bottom" secondItem="Grs-gT-Ev0" secondAttribute="bottom" id="Plc-sa-Dfr"/>
+                <constraint firstItem="SVL-yn-7QO" firstAttribute="top" secondItem="nHq-To-5C0" secondAttribute="bottom" constant="8" id="W6E-v7-Cen"/>
                 <constraint firstItem="Grs-gT-Ev0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Yhm-Jb-X81"/>
+                <constraint firstItem="nHq-To-5C0" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="enq-yq-wUV"/>
             </constraints>
-            <point key="canvasLocation" x="646" y="204"/>
+            <point key="canvasLocation" x="836" y="207"/>
         </view>
     </objects>
+    <resources>
+        <image name="gram.png" width="150" height="150"/>
+    </resources>
 </document>
