--- a/MVVM_FindSong/SongCell.xib
+++ b/MVVM_FindSong/SongCell.xib
@@ -8,11 +8,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SongCell" customModule="MVVM_FindSong" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" id="iN0-l3-epB" customClass="SongCell" customModule="MVVM_FindSong" customModuleProvider="target">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="SongCell" customModule="MVVM_FindSong" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="BMTH" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCc-6r-4be">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="BMTH" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCc-6r-4be">
                     <rect key="frame" x="76" y="37" width="155" height="15"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="P0i-Hz-rfG"/>
@@ -50,47 +50,28 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uNO-mG-GCM">
-                    <rect key="frame" x="239" y="36" width="73" height="31"/>
-                    <color key="backgroundColor" red="0.89411764709999997" green="0.18039215689999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="31" id="nK6-GU-o4g"/>
-                        <constraint firstAttribute="width" constant="73" id="xNz-kT-MbA"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
-                    <state key="normal" title="Save">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="saveSongForUrl:" destination="iN0-l3-epB" eventType="touchUpInside" id="8eT-Bm-paR"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" red="0.95749056180000003" green="0.98509080500000001" blue="0.90736134660000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="PRx-Xe-mKe" firstAttribute="leading" secondItem="W1r-wy-uAw" secondAttribute="trailing" constant="8" id="2rn-At-y0q"/>
-                <constraint firstItem="uNO-mG-GCM" firstAttribute="leading" secondItem="TCc-6r-4be" secondAttribute="trailing" constant="8" symbolic="YES" id="5PD-qQ-om2"/>
                 <constraint firstItem="2ju-Bx-IiI" firstAttribute="leading" secondItem="W1r-wy-uAw" secondAttribute="trailing" constant="8" symbolic="YES" id="B5d-9B-cFw"/>
                 <constraint firstItem="TCc-6r-4be" firstAttribute="top" secondItem="PRx-Xe-mKe" secondAttribute="bottom" constant="8" symbolic="YES" id="KVh-Iq-T6R"/>
                 <constraint firstItem="W1r-wy-uAw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="Ksd-v9-Te0"/>
                 <constraint firstAttribute="bottom" secondItem="W1r-wy-uAw" secondAttribute="bottom" constant="7" id="RIv-RQ-ioa"/>
                 <constraint firstAttribute="bottomMargin" secondItem="2ju-Bx-IiI" secondAttribute="bottom" id="Zyv-Mc-xcB"/>
-                <constraint firstAttribute="bottomMargin" secondItem="uNO-mG-GCM" secondAttribute="bottom" id="cJH-kJ-O8s"/>
                 <constraint firstAttribute="trailingMargin" secondItem="PRx-Xe-mKe" secondAttribute="trailingMargin" id="jA2-7O-lId"/>
                 <constraint firstItem="PRx-Xe-mKe" firstAttribute="topMargin" secondItem="iN0-l3-epB" secondAttribute="topMargin" constant="8" id="jXh-cF-Hxf"/>
-                <constraint firstAttribute="trailingMargin" secondItem="uNO-mG-GCM" secondAttribute="trailing" id="p51-ah-tCL"/>
                 <constraint firstItem="TCc-6r-4be" firstAttribute="leading" secondItem="W1r-wy-uAw" secondAttribute="trailing" constant="8" symbolic="YES" id="sBn-r9-Ul4"/>
                 <constraint firstItem="W1r-wy-uAw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="xdQ-vz-dh9"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="coverImg" destination="W1r-wy-uAw" id="Bi9-S5-wuc"/>
-                <outlet property="saveButton" destination="uNO-mG-GCM" id="VYZ-jv-XX1"/>
                 <outlet property="songAlbum" destination="TCc-6r-4be" id="u0c-JT-4aR"/>
                 <outlet property="songLength" destination="2ju-Bx-IiI" id="lPK-N6-LtF"/>
                 <outlet property="title" destination="PRx-Xe-mKe" id="yCz-ff-qeZ"/>
             </connections>
-            <point key="canvasLocation" x="1728" y="485.5"/>
+            <point key="canvasLocation" x="2043" y="765.5"/>
         </view>
     </objects>
     <resources>
